# Series_EGG_3_14

./: .gitignore  .gitmodules  00_Download_data.ipynb  01_Preproc_channels_data.ipynb  03_Collect_results.ipynb  04_B_images.ipynb  04_images.ipynb  05_images_global.ipynb  06_diferences.ipynb  formulas.ipynb  index.html  pyproject.toml  readme.md  readme_01.md  test.py  testes.ipynb
RHINO/: FIG_CABECA.3dm  FIG_CABECA.3dmbak  FIG_CABECA.bak  FIG_CABECA.dwg  INFO.gh  info_table.json  teste.json
bibtex/: zotero_exp_22_12_16.bib
c_code/: rhodccav03.c
data/: experiments_info.csv  experiments_smaller.csv
info/: channels_code.json  channels_code_full.json  channels_code_proc.json  clean_json.ipynb  experiment_dict.json  info_table.csv
latex_eng/: .gitignore  plos_latex_template.aux  plos_latex_template.bbl  plos_latex_template.blg  plos_latex_template.fdb_latexmk  plos_latex_template.fls  plos_latex_template.tex
latex_port/: plos_latex_template.aux  plos_latex_template.fdb_latexmk  plos_latex_template.fls  plos_latex_template.tex
notas_latex/: notas.tex
output/exracted_tables/: collected_data.pkl  collected_data.xlsx  collected_data_full.pkl  collected_data_full.xlsx  diff_mean_subject.pkl  diff_mean_subject.xlsx  diff_real_img_subject.pkl  diff_real_img_subject.xlsx  mse_table.pkl  mse_table.xlsx  stats.pkl  stats_collected.xlsx  (+8 more)
plos_latex_template_v3.6 - Atual/: plos_latex_template.aux  plos_latex_template.fdb_latexmk  plos_latex_template.fls
pytasks/: replace_fig_path.py  update_figs_to_submodule.ipynb
web_report/: make_video.py  report_maker.py
(+27117 files in other folders)
